Revert "fixed another bug where nav menu flickers off and on"
This reverts commit de1302be3c5399d2aa26e5de00492c682b507103.

--- a/src/Navbar/Header.css
+++ b/src/Navbar/Header.css
@@ -39,15 +39,17 @@
     height: 100vh;
     width: 100vw;
 
+    display: none;
     background-color: rgba(0, 0, 0, 0);
     backdrop-filter: brightness(100%) blur(0px);
 
-    transition: backdrop-filter 0.1s ease-in;
+    transition: backdrop-filter 0.1s ease-in, display 0s linear 0.1s;
 }
 
 #screenblur[show-nav="1"][is-large="0"] {
 
+    display: inline;
     backdrop-filter: brightness(60%) blur(10px);
 
-    transition: backdrop-filter 0.1s ease-in;
+    transition: backdrop-filter 0.1s ease-in, display 0s linear 0s;
 }
